--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
+    <link rel="stylesheet" href="style.css">
+    <title>Dictionary App</title>
+</head>
+<body>
+    <nav>
+        <div id="left-menu">
+          <h2>My<span>Dictionary App</span></h2>
+        </div>
+        </nav>
 
+        <audio id="sound"></audio>
+        <div class="container">
+           <div class="search-box">
+               <input type="text" id="inp-word" placeholder="Type the word here"/>
+               <button id="search-btn">Search</button>
+           </div>
+           <div class="result" id="result">
+               
+              
+           </div>
+           <div class="btn">
+            <li id="history-list"></li>
+            <button id="clear-history-btn">CLEAR HISTORY</button>
+            </div>
+        </div>
+        <script src="App.js"></script>
+</body>
+</html>
